--- a/android/app/src/main/res/layout/launch_screen.xml
+++ b/android/app/src/main/res/layout/launch_screen.xml
@@ -2,5 +2,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <ImageView android:layout_width="match_parent" android:layout_height="match_parent" android:src="@mipmap/launch_screen" android:scaleType="centerCrop" />
+    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingTop="200dp" android:paddingBottom="100dp" android:paddingLeft="25dp" android:src="@mipmap/launch_screen" android:scaleType="centerCrop" />
 </RelativeLayout>
